update for reinstall system

--- a/web_Front/Ajax-JSON/index1.html
+++ b/web_Front/Ajax-JSON/index1.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>index</title>
+    <style>
+    </style>
   </head>
   <body>
     <h1 style="color: red;">Test!!!</h1>
